<resources>
    <string name="app_name">AppApplus</string>
    <string name="singin">Acceder</string>
    <string name="img">Imagen</string>
    <string name="version">Version 1.0</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="title">Title</string>
    <string name="login">Iniciando Sesión…</string>
    <string name="orden">Orden :</string>
    <string name="contrato">Contrato :</string>
    <string name="medidor">Medidor :</string>
    <string name="client">Cliente :</string>
    <string name="direccion">Dirección</string>
    <string name="title_activity_suministro">SuministroActivity</string>
    <string name="punto">.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Mapa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab1">Transformadores</string>
    <string name="tab2">Maniobra</string>
    <string name="tab3">Proteccion</string>
    <string name="tab4">Redes Areas</string>

    <string name="tab5">Dat. Terreno</string>
    <string name="tab6">Puesto Tierra Existente</string>
    <string name="tab7">Puesto Tierra Proyectado</string>
    <string name="tab8">Medición y Ubicación</string>

    <string name="tab9"> Celda 10KV</string>
    <string name="tab10">Equipo 10KV</string>
    <string name="tab11">Protección</string>
    <string name="tab12">Transformadores</string>
    <string name="tab13">Servicio Particular</string>
    <string name="tab14">Alumbrado Publico</string>
    <string name="tab15">Generales</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="operario">Operario</string>
    <string name="area">Area</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="titulo_de_trabajo">Título de Trabajo</string>
    <string name="lugar">Lugar</string>
    <string name="check_one">Charla Pre Operacional, reconociendo previamente su zona de trabajo. Identificar los peligros y evaluar los riesgos, estableciendo las medidas de control vinculadas.</string>
    <string name="check_two">Revisar que los EPP, herramientas y otros medios de trabajos se encuentren en buen estado de conversación.</string>
    <string name="siguiente">Siguiente</string>
    <string name="observation">Observación</string>
    <string name="descripcion">Descripción</string>
    <string name="save">Guardar</string>
    <string name="observacion">Observación :</string>


    <string name="title_menu">Menu Principal</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="m">M</string>
    <string name="b">B</string>
    <string name="fecha_title">Fecha</string>
    <string name="observacion2">Observación 2</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="ver">Ver</string>
    <string name="deletePhoto">Eliminar Foto</string>
    <string name="si">SI</string>
    <string name="cancel">Cancelar</string>
    <string name="cantidad_de_lectura">Cantidad de Lectura</string>
    <string name="search">Busqueda</string>
    <string name="c">C:</string>
    <string name="s">S:</string>
    <string name="ok">OK</string>
    <string name="ir_para_adelante_o_atras">Ir para adelante o atras</string>
    <string name="medidor2">Medidor</string>
    <string name="actualizar">actualizar</string>
    <string name="actividad">Actividad</string>
    <string name="try_again">Por favor volver a intentarlo</string>
    <string name="centro_medico">Centro Médico</string>
    <string name="supervisor">Supervisor</string>
    <string name="sucursal">Sucursal</string>
    <string name="peligros_y_o_riesgos">PELIGROS Y/O RIESGOS</string>
    <string name="tarea">Tarea</string>
    <string name="entorno">Entorno</string>
    <string name="clasif_peligro_riesgo">Clasif Peligro / Riesgo</string>
    <string name="prob_ocurrencia">Prob Ocurrencia</string>
    <string name="se_verifico_estado">Se verifico Estado</string>
    <string name="medidas_de_control">Medidas de Control</string>
    <string name="ubicacion">Ubicación</string>
    <string name="persona">Persona</string>
    <string name="security">En Seguridad</string>
    <string name="salud">En Salud Ocupacional</string>
    <string name="ir">Ir</string>
    <string name="cargando">Cargando…</string>
    <string name="ta">TA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">header_title</string>
    <string name="nav_header_subtitle">sub_title</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="envio_formularios">Enviar Formularios</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="reparacion">Reparación Veredas</string>
    <string name="work">Trabajos SS</string>
    <string name="imagen">Imagen</string>
    <string name="agregar_kilometraje">Agregar Kilometraje</string>
    <string name="km">km</string>
    <string name="km_salida">Salida :</string>
    <string name="km_entrada">Entrada :</string>
    <string name="texto">texto</string>
    <string name="ingrese_kilometraje">Ingrese el Kilometraje</string>
    <string name="texto_envio2">Envios de Reparación y Trabajos</string>
    <string name="texto_envio1">Enviar Vehiculos</string>
    <string name="close">Cerrar</string>
    <string name="ancho">Ancho</string>
    <string name="m2">M2</string>
    <string name="obra">Obra</string>
    <string name="n_poste">N° Poste</string>
    <string name="adicionar_puntos_antes_off_despues_on">Adicionar Puntos Antes (Off) | Despues (On)</string>
    <string name="nombre_del_punto">Nombre del Punto</string>
    <string name="largo">Largo</string>
    <string name="estado">Seleccione Estado</string>
    <string name="next">Siguiente</string>
    <string name="before">Antes</string>
    <string name="format">Formato</string>
    <string name="comentario">Comentario</string>
    <string name="send">Enviar a Reasignar</string>
    <string name="acept">Aceptar OT</string>
    <string name="notAcept">Reasignar OT</string>
    <string name="thorgel">THORGEL</string>
    <string name="description_version">AppApplus requiere de una nueva actualización</string>
    <string name="wait_download">Espere mientras termina la descargar !</string>
    <string name="aperturar">Aperturar Parte Diario</string>
    <string name="aprobacion">Pendiente de aprobación de parte diario</string>
    <string name="registrar">Registrar</string>
    <string name="value1">Información de vano MT</string>
    <string name="value2">Información Conductor MT</string>
    <string name="value3">Información de vano BT</string>
    <string name="value5">Información de cables Telecomur</string>
    <string name="value4">Información de cables BT existentes</string>
    <string name="value6">"Información de retenida BT"</string>
    <string name="value7">"Equipos existentes"</string>
    <string name="value8">"Informacion adicional y de Cable"</string>
    <string name="value9">"Observaciones y Resultado de Factibilidad"</string>


    <string name="hint_izq_c1">Izq (C1) Cantidad</string>
    <string name="hint_izq_c2">Izq (C2) Cantidad"</string>
    <string name="hint_izq_a1">Izq (C1) Altura</string>
    <string name="hint_izq_a2">Izq (C2) Altura</string>

    <string name="hint_der_c1">Der (C1) Cantidad</string>
    <string name="hint_der_c2">Der (C2) Cantidad"</string>
    <string name="hint_der_a1">Der (C1) Altura</string>
    <string name="hint_der_a2">Der (C2) Altura</string>

    <string name="hint_adel_c1">Adel (C1) Cantidad</string>
    <string name="hint_adel_c2">Adel (C2) Cantidad"</string>
    <string name="hint_adel_a1">Adel (C1) Altura</string>
    <string name="hint_adel_a2">Adel (C2) Altura</string>

    <string name="hint_atras_c1">Atras (C1) Cantidad</string>
    <string name="hint_atras_c2">Atras (C2) Cantidad"</string>
    <string name="hint_atras_a1">Atras (C1) Altura</string>
    <string name="hint_atras_a2">Atras (C2) Altura</string>

    <string name="hint_brazo_c1">Brazo (C1) Longitud</string>
    <string name="hint_brazo_c2">Brazo (C2) Longitud"</string>
    <string name="hint_brazo_a1">Brazo (C1) Altura</string>
    <string name="hint_brazo_a2">Brazo (C2) Altura</string>

</resources>