<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/fab1"
            android:title="@string/value1"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab2"
            android:title="@string/value2"
            android:orderInCategory="2"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab3"
            android:title="@string/value3"
            android:orderInCategory="3"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab4"
            android:title="@string/valu4"
            android:orderInCategory="4"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab5"
            android:title= "@string/value5"
            android:orderInCategory="5"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab6"
            android:title="@string/value6"
            android:orderInCategory="6"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab7"
            android:title="@string/value7"
            android:orderInCategory="7"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab8"
            android:title="@string/value8"
            android:orderInCategory="8"
            app:showAsAction="never" />
        <item
            android:id="@+id/fab9"
            android:title="@string/value9"
            android:orderInCategory="9"
            app:showAsAction="never" />

        <item
            android:id="@+id/fab10"
            android:title="Agregar Fotos"
            android:orderInCategory="10"
            app:showAsAction="never" />
    </group>
</menu>